# notion-guest-be-gone-inator

./: .env.example  .gitignore  Cargo.toml  README.md  deathnote.csv
.devcontainer/: devcontainer.json
src/: main.rs
