[package]
name = "notion-guest-be-gone-inator"
version = "0.1.0"
edition = "2021"
description = "A script to mass remove guest access from a Notion page based on an email list"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["cargo"] }
csv = "1.2.1"
futures = "0.3.28"
notion = "0.5.1"
serde = "1.0.160"
